# React-Django-Structure

./: .gitignore  LICENSE  README.md  package.json
backend/: pyproject.toml
backend/apps/users/: serializers.py
backend/config/: settings.py  urls.py
frontend/: package-lock.json
frontend/src/: store.ts
frontend/src/Hooks/: index.js  useMagic.ts
frontend/src/Styles/: main.css.map  main.scss
